Kompletan update weba

--- a/dokumenti.html
+++ b/dokumenti.html
@@ -36,12 +36,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">O Klubu</a></li>
+							<li><a href="index.html">O Klubu</a></li>
 							<li><a href="gym.html">Štanga Gym</a></li>
 							<li><a href="powerlifting.html">Powerlifting</a></li>
 							<li><a href="uclanjenje.html">Učlanjenje</a></li>
 							<li><a href="clanovi.html">Članovi</a></li>
-							<li><a href="dokumenti.html">Dokumenti</a></li>
+							<li class="active"><a href="dokumenti.html">Dokumenti</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/plk.stanga" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -56,29 +56,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<!--span class="date">April 25, 2017</span-->
-									<h2><a href="#">Powerlifting klub<br />
-									Štanga</a></h2>
-								</header>
-								<p>PLK Štanga osnovan je početkom 2017. godine od strane trojice entuzijasta koji su par godina ranije prvi puta zakoračili u teretanu i ubrzo se zaljubili u treninge "snage" (točnije, jakosti, engl. "strength"). Kako je za sudjelovanje na powerlifting natjecanjima u Hrvatskoj potrebno biti član nekog kluba, a u Zagrebu nismo našli nijedan klub koji nam se na adekvatan način prezentirao, odlučili smo osnovati svoj vlastiti klub.</p>
-								<p>Osnivači su krenuli s treninzima u Beta Fitness narednih četiri godine, nakon čega klub otvara <a href="gym.html">svoj vlastiti prostor</a> gdje svi članovi mogu trenirati zajedno u adekvatnim uvjetima.</p>
-								<p><h3>Glavni fokus kluba i ono po čemu se trudimo istaknuti su sljedeća tri područja:</h3>
-								<ol>
-								<li><b>Nulta stopa tolerancije prema dopingu i nedozvoljenim sredstvima</b><br/>
-								Nedozvoljenim sredstvima, s naglaskom na anaboličke steroide, nema mjesta u našem klubu. Ovo je glavno pravilo kluba i po tom pitanju smo stroži nego WADA. Svaki član prije pristupanja usmeno i pismeno potvrđuje da je <i>lifetime natural</i>. Između ostalog, bitno nam je da djeca, naši kadeti i juniori, ne budu okružena "krivim" uzorima, kakvih su socijalne mreže prepune.</li>
-								<li><b>Pristupačnost početnicima i rast sporta</b><br/>
-								I sami smo krenuli u ovo kao početnici i dobro se sjećamo što nam je bilo najpotrebnije u počecima. Dobro vodstvo, trener i okolina u kojoj početnici mogu napredovati. Powerlifting je u Hrvatskoj još u začecima razvoja. Svjetska klasa powerliftera se neće pronaći selektivnim privlačenjem ljudi koji već jesu jaki. Privlačenjem većeg broja novih sportaša povećavamo <i>genetski bazen</i> i povećavamo šanse da nađemo i odgojimo vrhunske powerliftere. Na taj način i svi ostali napreduju i rastu.</li>
-								<li><b>Vrhunska oprema za treniranje</b><br/>
-								Veliki problem teretana na ovim prostorima je neadekvatna oprema za trening snage. Ne samo da nedostaje powerlifting opreme, nego je često i obična oprema ispod svakog standarda. Do neke mjere se snaga može izgraditi na običnoj opremi, ali za ozbiljno bavljenje powerliftingom, kao i za svaki sport, potrebna je specifična oprema. Power barovi, combo rackovi, kalibrirani utezi postoje s dobrim razlogom.
-								</li>
-								</ol>
-								</p>
-								<div class="image main"><img src="images/klupska.jpg" alt="" /></div>
-								<div class="image"><img src="images/logo_small.png" alt="" /></div>
-								<!--a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a-->
-								<!--ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul-->
+									<h2><a href="#">Dokumenti</a></h2>
+								</header>								
+								<p><a href="pdfs/Statut-kluba_v2.pdf" target="_blank">Statut kluba (download)</a></p>
 							</article>
 					</div>
 
