--- a/gym.html
+++ b/gym.html
@@ -36,8 +36,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">O Klubu</a></li>
-							<li><a href="gym.html">Štanga Gym</a></li>
+							<li><a href="index.html">O Klubu</a></li>
+							<li class="active"><a href="gym.html">Štanga Gym</a></li>
 							<li><a href="powerlifting.html">Powerlifting</a></li>
 							<li><a href="uclanjenje.html">Učlanjenje</a></li>
 							<li><a href="clanovi.html">Članovi</a></li>
@@ -57,28 +57,27 @@
 							<article class="post featured">
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
-									<h2><a href="#">Powerlifting klub<br />
-									Štanga</a></h2>
+									<h2><a href="#">Štanga gym</a></h2>
 								</header>
-								<p>PLK Štanga osnovan je početkom 2017. godine od strane trojice entuzijasta koji su par godina ranije prvi puta zakoračili u teretanu i ubrzo se zaljubili u treninge "snage" (točnije, jakosti, engl. "strength"). Kako je za sudjelovanje na powerlifting natjecanjima u Hrvatskoj potrebno biti član nekog kluba, a u Zagrebu nismo našli nijedan klub koji nam se na adekvatan način prezentirao, odlučili smo osnovati svoj vlastiti klub.</p>
-								<p>Osnivači su krenuli s treninzima u Beta Fitness narednih četiri godine, nakon čega klub otvara <a href="gym.html">svoj vlastiti prostor</a> gdje svi članovi mogu trenirati zajedno u adekvatnim uvjetima.</p>
-								<p><h3>Glavni fokus kluba i ono po čemu se trudimo istaknuti su sljedeća tri područja:</h3>
-								<ol>
-								<li><b>Nulta stopa tolerancije prema dopingu i nedozvoljenim sredstvima</b><br/>
-								Nedozvoljenim sredstvima, s naglaskom na anaboličke steroide, nema mjesta u našem klubu. Ovo je glavno pravilo kluba i po tom pitanju smo stroži nego WADA. Svaki član prije pristupanja usmeno i pismeno potvrđuje da je <i>lifetime natural</i>. Između ostalog, bitno nam je da djeca, naši kadeti i juniori, ne budu okružena "krivim" uzorima, kakvih su socijalne mreže prepune.</li>
-								<li><b>Pristupačnost početnicima i rast sporta</b><br/>
-								I sami smo krenuli u ovo kao početnici i dobro se sjećamo što nam je bilo najpotrebnije u počecima. Dobro vodstvo, trener i okolina u kojoj početnici mogu napredovati. Powerlifting je u Hrvatskoj još u začecima razvoja. Svjetska klasa powerliftera se neće pronaći selektivnim privlačenjem ljudi koji već jesu jaki. Privlačenjem većeg broja novih sportaša povećavamo <i>genetski bazen</i> i povećavamo šanse da nađemo i odgojimo vrhunske powerliftere. Na taj način i svi ostali napreduju i rastu.</li>
-								<li><b>Vrhunska oprema za treniranje</b><br/>
-								Veliki problem teretana na ovim prostorima je neadekvatna oprema za trening snage. Ne samo da nedostaje powerlifting opreme, nego je često i obična oprema ispod svakog standarda. Do neke mjere se snaga može izgraditi na običnoj opremi, ali za ozbiljno bavljenje powerliftingom, kao i za svaki sport, potrebna je specifična oprema. Power barovi, combo rackovi, kalibrirani utezi postoje s dobrim razlogom.
-								</li>
-								</ol>
+								<p>PLK Štanga ima svoj prostor za treninge, opremljen vrhunskom powerlifting opremom kakvu ćete teško naći na ovim prostorima:
+								<ul><li>Rogue combo rack</li>
+								<li>ELUIR combo rack</li>
+								<li>3x Rogue Ohio power bar</li>
+								<li>~800kg Rogue powerlifting utega</li>
+								<li>Rogue Echo bike</li></ul>
+								<div class="image main"><img src="images/gym-1.jpg" alt="" /></div>
 								</p>
-								<div class="image main"><img src="images/klupska.jpg" alt="" /></div>
-								<div class="image"><img src="images/logo_small.png" alt="" /></div>
-								<!--a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a-->
-								<!--ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul-->
+								<p>Vrata su otvorena za sve članove IPF klubova, ali i za rekreativce koji su zainteresirani za ozbiljan trening fokusiran na jakost.</p>
+								<p>Termini treninga su po dogovoru, a uglavnom treniramo u grupama od 3 do 6 ljudi. Imamo i opciju pojedinačnog (drop-in) treninga uz simboličnu donaciju te prethodnu najavu i dogovor oko termina.</p>
+								<p>Adresa je Rudeška cesta 92:<br/>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d173.85215082641017!2d15.919525908501111!3d45.79855146322995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d14b81a70f53%3A0x3ca43e1511177f23!2sRude%C5%A1ka%20cesta%2092%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1633466751343!5m2!1sen!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
+								<p><ul><b>Cjenik:</b>
+								<li>Mjesečna članarina - 300 kn</li>
+								<li>Polumjesečna članarina (6 dolazaka) - 150 kn</li>
+								<li>Drop-in (pojedinačni dolazak) - 30 kn</li></ul>
+								Ako ste zainteresirani za učlanjenje, javite nam se na društvenim mrežama ili preko e-maila. Više informacija o učlanjenju u klub možete saznati <a href="uclanjenje.html">ovdje</a>.
+								<div class="image main"><img src="images/gym-2.jpg" alt="" /></div>
+								</p>
 							</article>
 					</div>
 
