--- a/powerlifting.html
+++ b/powerlifting.html
@@ -26,10 +26,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">PLK Štanga</a></li>
+							<li><a href="index.html">O Klubu</a></li>
+							<li><a href="gym.html">Štanga Gym</a></li>
 							<li class="active"><a href="powerlifting.html">Powerlifting</a></li>
 							<li><a href="uclanjenje.html">Učlanjenje</a></li>
 							<li><a href="clanovi.html">Članovi</a></li>
+							<li><a href="dokumenti.html">Dokumenti</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/plk.stanga" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -113,31 +115,33 @@
 								<li>52.0 kg - od 47.01 kg do 52.0 kg</li>
 								<li>57.0 kg - od 52.01 kg do 57.0 kg</li>
 								<li>63.0 kg - od 57.01 kg do 63.0 kg</li>
-								<li>72.0 kg - od 63.01 kg do 72.0 kg</li>
-								<li>84.0 kg - od 72.01 kg do 84.0 kg</li>
+								<li>69.0 kg - od 63.01 kg do 69.0 kg</li>
+								<li>76.0 kg - od 69.01 kg do 76.0 kg</li>
+								<li>84.0 kg - od 76.01 kg do 84.0 kg</li>
 								<li>84.0+ kg - od 84.01 kg</li></ul>
 
 								Vaganje se vrši 2h prije natjecanja. Ukoliko natjecatelj ima više kilograma od maksimalne kilaže kategorije u koju se prijavio, automatski je diskvalificiran. Tijekom natjecanja potrebno je biti prisutan do samog kraja u slučaju doping kontrole.</p><br/><br/>
 								<header class="major">
 									<span class="date"><h3>Kotizacije</h3></span>
 								</header>
-								<p>Cijene kotizacija za natjecanja u Hrvatskoj su od 200 do 250kn za powerlifting ili bench press, ovisno o natjecanju. Trošak kotizacije snosi natjecatelj.</p>
+								<p>Cijene kotizacija za natjecanja u Hrvatskoj su od 250kn za powerlifting ili bench press. Trošak kotizacije snosi natjecatelj.</p>
 							</section>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<a href="https://www.powerlifting-ipf.com/" target="_blank"><h3>International Powerlifting Federation<br/><img src="images/ipf_logo.png" alt="IPF" /></a><h3><br/>
-							<a href="http://www.europowerlifting.org/" target="_blank"><h3>European Powerlifting Federation<br/><img src="images/epf_logo.jpg" alt="EPF" /> </a><h3><br/>
-							<a href="http://www.hpls-powerlifting.hr/" target="_blank"><h3>Hrvatski Powerlifting Savez<br/><img src="images/hpls_logo.jpg" alt="HPLS" /> </a><h3>
+							<a href="https://www.powerlifting-ipf.com/" target="_blank"><h3>International Powerlifting Federation<br/><img src="images/ipf_logo.png" alt="IPF" /></a></h3><br/>
+							<a href="http://www.europowerlifting.org/" target="_blank"><h3>European Powerlifting Federation<br/><img src="images/epf_logo.png" alt="EPF" /> </a></h3><br/>
+							<a href="http://www.hpls-powerlifting.hr/" target="_blank"><h3>Hrvatski Powerlifting Savez<br/><img src="images/hpls_logo.png" alt="HPLS" /> </a></h3>
+							<a href="https://www.zpls.hr" target="_blank"><h3>Zagrebački Powerlifting Savez<br/><img src="images/zpls_logo.png" alt="ZPLS" /></a></h3><br/>
 						</section>
 						<section class="split contact">
-							<!--section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section-->
+							<section class="alt">
+								<h3>Adresa</h3>
+								<p>Rudeška cesta 92<br />
+								Zagreb</p>
+							</section>
 							<section>
 								<h3>Email</h3>
 								<p><a href="mailto:plk.stanga@gmail.com">plk.stanga@gmail.com</a></p>
