--- a/clanovi.html
+++ b/clanovi.html
@@ -26,10 +26,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">PLK Štanga</a></li>
+							<li><a href="index.html">O Klubu</a></li>
+							<li><a href="gym.html">Štanga Gym</a></li>
 							<li><a href="powerlifting.html">Powerlifting</a></li>
 							<li><a href="uclanjenje.html">Učlanjenje</a></li>
 							<li class="active"><a href="clanovi.html">Članovi</a></li>
+							<li><a href="dokumenti.html">Dokumenti</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/plk.stanga" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -46,7 +48,7 @@
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
 									<h1>Članovi</h1>
-									<p>Klub trenutno broji preko 30 članova od kojih su većina natjecatelji. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik). Glavni trener kluba je Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga.</p>
+									<p>Klub trenutno broji preko 30 članova od kojih su većina natjecatelji. Vodstvo kluba čine Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Stjepan Balog (tajnik). Glavni trener kluba je također Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga.</p>
 								</header>
 								<p>U nastavku je popis naših aktivnih natjecatelja po redoslijedu pristupanja klubu, zajedno s linkovima na socijalne mreže i OpenPowerlifting gdje su svi njihovi rezultati.</p> 
 							</section>
@@ -82,42 +84,6 @@
 								</article>
 								<article>
 									<header>
-										<h2>Vinko Barić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/vinkobaric/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/vinkobaric" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>																
-								<article>
-									<header>
-										<h2>Ivana Pitteroff</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/andvana_pitt/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/ivanapitteroff" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Ivan Matovinović</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/ivan.matovinovic1/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/ivanmatovinovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Karlo Heisinger</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/gugo_sugo/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/karlogudelj" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>								
-								<article>
-									<header>
 										<h2>Hrvoje Motik</h2>
 									</header>
 									<ul class="icons alt">
@@ -127,72 +93,10 @@
 								</article>			
 								<article>
 									<header>
-										<h2>Sara Šobak</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/bulk_kitty/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/sarasobak" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Ivana Ferhatbegović</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/iivanchicaa/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/ivanaferhatbegovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
 										<h2>Hrvoje Lovrić</h2>
 									</header>
 									<ul class="icons alt">
 										<li><a href="https://www.openpowerlifting.org/u/hrvojelovric" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Luka Vučina</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/luka_2204_/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/lukavucina" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Filip Jambrešić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/filipjambresic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/filipjambresic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Tomislav Novak</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.openpowerlifting.org/u/tomislavnovak" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Nino Gospočić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/ninogospocic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/ninogospocic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>	
-								<article>
-									<header>
-										<h2>Zvonimir Josip Strinić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/zjstrinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/zvonimirjosipstrinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -233,88 +137,11 @@
 								</article>
 								<article>
 									<header>
-										<h2>Karlo Kovač</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.openpowerlifting.org/u/karlokovac" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Mario Gabud</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/gabudizator_conditioning/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/mariogabud" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Bruno Šimunović</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/bruno.simunovic2701/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/brunosimunovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Vid Števinović</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.openpowerlifting.org/u/vidstevinovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Tin Hanžić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.openpowerlifting.org/u/tinhanzic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Dario Sorić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/dariosoric.sore/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/dariosoric" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
 										<h2>Jelena Ivančić</h2>
 									</header>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/jelena.ivancic23/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/jelenaivancic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Bepo Pedisić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/bepopedisic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/bepopedisic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Tomislav Gelo</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.openpowerlifting.org/u/tomislavgelo" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Nikola Huljina</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/n.huljina/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/nikolahuljina" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -334,22 +161,88 @@
 										<li><a href="https://www.openpowerlifting.org/u/noazvonimirpaic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2>Dominik Zemljić</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/zemljicdominik/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/dominikzemljic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Ines Krstanović</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/ineskrstanovic/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ineskrstanovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Tommi Lovak</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/tommilovak/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/tommilovak" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Martina Starešina</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.openpowerlifting.org/u/martinastaresina" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Marija Ćavarušić</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/mia.cavarusic/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/marijacavarusic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Randy Žužić</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/randyz98/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/randyzuzic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Dora Belas</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/dimix.de/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/dorabelas" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									
+								</article>
 							</section>
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<a href="https://www.powerlifting-ipf.com/" target="_blank"><h3>International Powerlifting Federation<br/><img src="images/ipf_logo.png" alt="IPF" /></a><h3><br/>
-							<a href="http://www.europowerlifting.org/" target="_blank"><h3>European Powerlifting Federation<br/><img src="images/epf_logo.jpg" alt="EPF" /> </a><h3><br/>
-							<a href="http://www.hpls-powerlifting.hr/" target="_blank"><h3>Hrvatski Powerlifting Savez<br/><img src="images/hpls_logo.jpg" alt="HPLS" /> </a><h3>
+							<a href="https://www.powerlifting-ipf.com/" target="_blank"><h3>International Powerlifting Federation<br/><img src="images/ipf_logo.png" alt="IPF" /></a></h3><br/>
+							<a href="http://www.europowerlifting.org/" target="_blank"><h3>European Powerlifting Federation<br/><img src="images/epf_logo.png" alt="EPF" /> </a></h3><br/>
+							<a href="http://www.hpls-powerlifting.hr/" target="_blank"><h3>Hrvatski Powerlifting Savez<br/><img src="images/hpls_logo.png" alt="HPLS" /> </a></h3>
+							<a href="https://www.zpls.hr" target="_blank"><h3>Zagrebački Powerlifting Savez<br/><img src="images/zpls_logo.png" alt="ZPLS" /></a></h3><br/>
 						</section>
 						<section class="split contact">
-							<!--section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section-->
+							<section class="alt">
+								<h3>Adresa</h3>
+								<p>Rudeška cesta 92<br />
+								Zagreb</p>
+							</section>
 							<section>
 								<h3>Email</h3>
 								<p><a href="mailto:plk.stanga@gmail.com">plk.stanga@gmail.com</a></p>
